2011-06-13  6.7.0-7 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.0-7.

2011-06-09  6.7.0-7 Cristy  <quetzlzacatenango@image...>
  * Fixed "conversion from unsigned __int64 to double not implemented"
    so IM can compile under VisualStudio 6.

2011-06-08  6.7.0-7 Glenn Randers-Pehrson <glennrp@image...>
  * The PNG encoder would sometimes make black transparent when some
    other gray level was supposed to be the transparent color (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=18900).
    This occurred only with 1, 2, 4-bit grayscale images with Q16 or Q32
    builds.

2011-06-08  6.7.0-6 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.0-6.

2011-06-08  6.7.0-6 Cristy  <quetzlzacatenango@image...>
  * Fix transient error for composite over operator.

2011-06-07  6.7.0-5 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.0-5.

2011-06-07  6.7.0-5 Cristy  <quetzlzacatenango@image...>
  * Fix one-off bug in option parser (reference
    http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=609177).
  * Transient bug with composite over in magick/composite-private.h.

2011-06-06  6.7.0-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.0-4.

2011-06-03  6.7.0-4 Cristy  <quetzlzacatenango@image...>
  * Support -direction right-to-left for the label: and caption: coders.
  * Blue / green reversed for JPEG-compressed TIFF images.

2011-06-03  6.7.0-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.0-3.

2011-06-02  6.7.0-2 Cristy  <quetzlzacatenango@image...>
  * Use memmove() instead of memcpy() in StripString().

2011-05-27  6.7.0-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.0-2.

2011-05-26  6.7.0-2 Cristy  <quetzlzacatenango@image...>
  * ImageMagick now compiles on Hurd (reference
    http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=628020).
  * Use vfprintf rather than fprintf in FormatLocaleFileList().

2011-05-26  6.7.0-1 Cristy  <quetzlzacatenango@image...>